--- a/christianli.html
+++ b/christianli.html
@@ -48,11 +48,11 @@
     <nav class = "nav-home">
       <ul class ="list">
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/Website/christianli.html">home</a>
+          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/christianli.html">home</a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/Website/about.html">about me </a>
+          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/about.html">about me </a>
         </li>
 
         <li class ="item">
