--- a/about.html
+++ b/about.html
@@ -60,15 +60,15 @@
     <nav class = "nav-home">
       <ul class ="list">
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/christianli.html">home</a>
+          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/index.html">home</a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/about.html">about me </a>
+          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/about.html">about me </a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/christian_li_swe.pdf">resume </a>
+          <a class = "link" href = "file:///C:/Users/Christian/Desktop/Website/christian_li.pdf">resume </a>
         </li>
 
         <li class ="item">
