--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <nav class = "nav-home">
       <ul class ="list">
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/christianli.html">home</a>
+          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/index.html">home</a>
         </li>
 
         <li class ="item">
