--- a/about.html
+++ b/about.html
@@ -60,15 +60,15 @@
     <nav class = "nav-home">
       <ul class ="list">
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/index.html">home</a>
+          <a class = "link" href = "https://li-christian.github.io/index.html">home</a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/about.html">about me </a>
+          <a class = "link" href = "https://li-christian.github.io/about.html">about me </a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/Website/christian_li.pdf">resume </a>
+          <a class = "link" href = "https://li-christian.github.io/christian_li.pdf">resume </a>
         </li>
 
         <li class ="item">
@@ -79,16 +79,7 @@
 
     <div class ="about">
       <h1>Hi, it's me!</h1>
-      <img src = "photo_christian.jpg" alt ="Self Portrait" width = "250" height = "350" class = "center">
-      <h4> I am currently a 3rd year Electrical Engineering student studying at the University of Calgary. I am a firm believer that anyone can achieve their dreams if they are passionate. In my case, my passions are incorporating technolgoy to better the things we use and do. A few years from now I will be a full time Software developer. After that, eventually start my own project using everything I've learned to date.
-      </h4>
-      <h1> Personal Interests </h1>
-      <h4> Cryptocurrency, Stocks, eSports, Basketball, Hockey, Cooking, Manga
-      </h4>
-      <h1> My Favorite Saying </h1>
-      <h4> "No amount of money ever bought a second of time" - Tony Stark, Avengers Endgame
-      </h4>
-      <h4> "Sometimes it is the people no one imagines anything of who do the things that no one can imagine" - Joan Clarke, Imitation Game
+      <h4> I am currently a 3rd year Electrical Engineering student studying at the University of Calgary.</h4>
       </h4>
     </div>
   </body>
