--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
     <nav class = "nav-home">
       <ul class ="list">
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/index.html">home</a>
+          <a class = "link" href = "https://li-christian.github.io/index.html">home</a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Documents/GitHub/li-christian.github.io/about.html">about me </a>
+          <a class = "link" href = "https://li-christian.github.io/about.html">about me </a>
         </li>
 
         <li class ="item">
-          <a class = "link" href = "file:///C:/Users/Christian/Desktop/Website/christian_li.pdf">resume </a>
+          <a class = "link" href = "https://li-christian.github.io/christian_li.pdf">resume </a>
         </li>
 
         <li class ="item">
