Styling and consistency
Made the background and sizing consistent throughout eat page

--- a/about.html
+++ b/about.html
@@ -7,13 +7,14 @@
     <title> About Me | Christian Li </title>
     <style>
       body {
+        background: linear-gradient(to bottom left, #ffffff 0%, #3399ff 100%) fixed;
         font-family: 'Courier New', Courier, monospace;
-        background: #eaeaea;
+        height: 100%;
+        width: 100%;
       }
       .header {
-        padding: 60px;
+        padding: 20px;
         text-align: center;
-        background: #a3d9e3;
         color: white;
       }
       .header h1 {
@@ -21,7 +22,7 @@
         font-size: 40px;
       }
       .nav-home {
-        background: #a3d9e3;
+        background: transparent;
         text-align: center;
         color: white;
       }
@@ -33,28 +34,19 @@
         padding: 10px;
         color: #black;
       }
-      .about h1 {
-        padding: 12px;
+      .home p {
+        font-style: italic;
         font-family: 'Courier New', Courier, monospace;
         font-size: 20px;
+        color: white;
         text-align: center;
-        text-decoration: underline;
-      }
-      .about h4 {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 14px;
-        text-align: center;
-      }
-      .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
+        padding: 20px;
       }
     </style>
   </head>
   <body>
     <div class = "header">
-      <h1> About Me </h1>
+      <h1> About me </h1>
       <p>a personal website </p>
     </div>
     <nav class = "nav-home">
@@ -77,10 +69,8 @@
       </ul>
     </nav>
 
-    <div class ="about">
-      <h1>Hi, it's me!</h1>
-      <h4> I am currently a 3rd year Electrical Engineering student studying at the University of Calgary.</h4>
-      </h4>
+    <div class ="home">
+      <p>I recently finished Third year of Electrical Engineering at the University of Calgary! </p>
     </div>
   </body>
 </html>
