--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title> Home | Christian Li </title>
     <style>
       body {
+        background: linear-gradient(to bottom left, #ffffff 0%, #3399ff 100%) fixed;
         font-family: 'Courier New', Courier, monospace;
-        background: #eaeaea;
+        height: 100%;
+        width: 100%;
       }
       .header {
-        padding: 60px;
+        padding: 20px;
         text-align: center;
-        background: #a3d9e3;
         color: white;
       }
       .header h1 {
@@ -21,7 +22,7 @@
         font-size: 40px;
       }
       .nav-home {
-        background: #a3d9e3;
+        background: transparent;
         text-align: center;
         color: white;
       }
@@ -33,10 +34,13 @@
         padding: 10px;
         color: #black;
       }
-      .home h1 {
+      .home p {
+        font-style: italic;
         font-family: 'Courier New', Courier, monospace;
         font-size: 20px;
+        color: white;
         text-align: center;
+        padding: 20px;
       }
     </style>
   </head>
@@ -66,9 +70,9 @@
     </nav>
 
     <div class ="home">
-      <h1>Third Year Electrical Engineering Student @ University of Calgary (Grad 2021)</h1>
-      <h1>Vice President of Communications @ IEEE UofC Student Branch (2020)</h1>
-      <h1>Former Operations @ Ritual (2019)</h1>
+      <p>Third Year Electrical Engineering Student @ University of Calgary (Grad 2021)</p>
+      <p>Vice President of Communications @ IEEE UofC Student Branch (2020)</p>
+      <p>Former Operations @ Ritual (2019)</p>
     </div>
   </body>
 </html>
