Styling and consistency pt2
changes

--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
     <title> Home | Christian Li </title>
     <style>
       body {
-        background: linear-gradient(to bottom left, #ffffff 0%, #3399ff 100%) fixed;
+        background: rgb(71,71,223);
+        background: linear-gradient(90deg, rgba(71,71,223,1) 35%, rgba(2,0,36,1) 100%, rgba(0,212,255,1) 100%) fixed;
         font-family: 'Courier New', Courier, monospace;
         height: 100%;
         width: 100%;
       }
       .header {
-        padding: 20px;
+        padding: 14px;
         text-align: center;
         color: white;
       }
       .header h1 {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 40px;
+        font-weight: bold;
+        font-size: 50px;
+      }
+      .header p {
+        font-style: oblique;
       }
       .nav-home {
-        background: transparent;
         text-align: center;
         color: white;
       }
@@ -40,7 +43,7 @@
         font-size: 20px;
         color: white;
         text-align: center;
-        padding: 20px;
+        padding: 14px;
       }
     </style>
   </head>
