--- a/about.html
+++ b/about.html
@@ -6,34 +6,37 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <title> About Me | Christian Li </title>
     <style>
-      body {
-        background: linear-gradient(to bottom left, #ffffff 0%, #3399ff 100%) fixed;
-        font-family: 'Courier New', Courier, monospace;
-        height: 100%;
-        width: 100%;
-      }
-      .header {
-        padding: 20px;
-        text-align: center;
-        color: white;
-      }
-      .header h1 {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 40px;
-      }
-      .nav-home {
-        background: transparent;
-        text-align: center;
-        color: white;
-      }
-      .item {
-        display:inline-block;
-      }
-      ul li {
-        font-weight: 200;
-        padding: 10px;
-        color: #black;
-      }
+    body {
+      background: rgb(71,71,223);
+      background: linear-gradient(90deg, rgba(71,71,223,1) 35%, rgba(2,0,36,1) 100%, rgba(0,212,255,1) 100%) fixed;
+      font-family: 'Courier New', Courier, monospace;
+      height: 100%;
+      width: 100%;
+    }
+    .header {
+      padding: 14px;
+      text-align: center;
+      color: white;
+    }
+    .header h1 {
+      font-weight: bold;
+      font-size: 50px;
+    }
+    .header p {
+      font-style: oblique;
+    }
+    .nav-home {
+      text-align: center;
+      color: white;
+    }
+    .item {
+      display:inline-block;
+    }
+    ul li {
+      font-weight: 200;
+      padding: 10px;
+      color: #black;
+    }
       .home p {
         font-style: italic;
         font-family: 'Courier New', Courier, monospace;
