only index update
single page update

--- a/index.html
+++ b/index.html
@@ -4,78 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
     <title> Home | Christian Li </title>
     <style>
       body {
-        background: rgb(71,71,223);
-        background: linear-gradient(90deg, rgba(71,71,223,1) 35%, rgba(2,0,36,1) 100%, rgba(0,212,255,1) 100%) fixed;
-        font-family: 'Courier New', Courier, monospace;
         height: 100%;
         width: 100%;
+        font-family: 'Advent Pro';font-size: 22px;
+        background-color: #D3D3D3;
       }
       .header {
-        padding: 14px;
+        padding: 12px;
         text-align: center;
-        color: white;
+        color: black;
+        background-color: white;
       }
       .header h1 {
-        font-weight: bold;
-        font-size: 50px;
+        font-size: 44px;
       }
-      .header p {
-        font-style: oblique;
+      .center {
+        padding: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
-      .nav-home {
-        text-align: center;
-        color: white;
+      .home {
+        background: #2F4F4F;
+        padding: 20px;
       }
-      .item {
-        display:inline-block;
-      }
-      ul li {
-        font-weight: 200;
+      .home h2 {
         padding: 10px;
-        color: #black;
+        font-size: 24px;
+        color: white;
+        text-align: center;
       }
       .home p {
-        font-style: italic;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 20px;
+        background: #404040;
+        padding: 20px;
+        width: 960px;
+        border: 5px solid gray;
+        margin-left: auto;
+        margin-right: auto;
         color: white;
-        text-align: center;
-        padding: 14px;
+        font-size: 24px;
       }
     </style>
   </head>
   <body>
     <div class = "header">
       <h1> Christian Li </h1>
-      <p>a personal website </p>
     </div>
-    <nav class = "nav-home">
-      <ul class ="list">
-        <li class ="item">
-          <a class = "link" href = "https://li-christian.github.io/index.html">home</a>
-        </li>
-
-        <li class ="item">
-          <a class = "link" href = "https://li-christian.github.io/about.html">about me </a>
-        </li>
-
-        <li class ="item">
-          <a class = "link" href = "https://li-christian.github.io/christian_li.pdf">resume </a>
-        </li>
-
-        <li class ="item">
-          <a class = "link" href = "mailto:christian.li@ucalgary.ca?Subject=Hello%20again" target="_top">contact me </a>
-        </li>
-      </ul>
-    </nav>
-
+    <img src="laptop-1.jpg" width="1000" height="500" class = "center">
     <div class ="home">
-      <p>Third Year Electrical Engineering Student @ University of Calgary (Grad 2021)</p>
-      <p>Vice President of Communications @ IEEE UofC Student Branch (2020)</p>
-      <p>Former Operations @ Ritual (2019)</p>
+      <h2>Hello World! This is my personal website</h2>
+      <p>Christian Li
+        <br> University of Calgary
+        <br> Electrical Engineering
+        <br> <a href ="https://li-christian.github.io/christian_li.pdf"> Resume </a>
+        <br> <a href ="mailto:christian.li@ucalgary.ca?Subject=Hello%20again"> Contact Me </a>
+      </p>
+
     </div>
+
   </body>
 </html>
