added icon to html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
-    <title> Home | Christian Li </title>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <title>Christian Li </title>
+    <link rel="icon" href="icon.png" type="image/icon type">
     <style>
       body {
         height: 100%;
@@ -23,7 +26,7 @@
         font-size: 44px;
       }
       .center {
-        padding: 20px;
+        padding: 16px;
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -52,7 +55,12 @@
   </head>
   <body>
     <div class = "header">
-      <h1> Christian Li </h1>
+      <h1> Christian Li
+        <a href="https://github.com/li-christian">
+            <i class="fa fa-github" style="font-size:24px"></i>
+        </a>
+
+      </h1>
     </div>
     <img src="laptop-1.jpg" width="1000" height="500" class = "center">
     <div class ="home">
@@ -63,8 +71,6 @@
         <br> <a href ="https://li-christian.github.io/christian_li.pdf"> Resume </a>
         <br> <a href ="mailto:christian.li@ucalgary.ca?Subject=Hello%20again"> Contact Me </a>
       </p>
-
     </div>
-
   </body>
 </html>
