--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <p>Christian Li
         <br> University of Calgary
         <br> Electrical Engineering
-        <br> <a href ="https://li-christian.github.io/christian_li.pdf"> Resume </a>
+        <br> <a href ="GameFi.pdf"> GameFi - March 16, 2022 </a>
         <br> <a href ="mailto:christian.li@ucalgary.ca?Subject=Hello%20again"> Contact Me </a>
       </p>
     </div>
