--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
       <p>Christian Li
         <br> University of Calgary
         <br> Electrical Engineering
-        <br> <a href ="GameFi.pdf"> GameFi - March 16, 2022 </a>
         <br> <a href ="mailto:christian.li@ucalgary.ca?Subject=Hello%20again"> Contact Me </a>
+        <embed src="GameFi.pdf" width="800px" height="2100px" />
       </p>
     </div>
   </body>
